--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   firebase_auth: ^4.2.6
+  cloud_firestore: ^4.3.2
+  flutter_map: ^0.12.0
+  latlong: ^0.6.1
 
 dev_dependencies:
   flutter_test:
@@ -75,6 +78,7 @@ flutter:
     - img/images/wave-haikei.png
     - img/images/wave-haikei (1).png
     - img/images/wave-haikei (2).png
+    - img/images/clean earth.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
