--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,7 +82,7 @@ flutter:
     - img/images/wave-haikei (1).png
     - img/images/wave-haikei (2).png
     - img/images/clean earth.jpg
-    - assets/
+    - img/images/tushar.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
