--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_map: ^0.12.0
   latlong: ^0.6.1
   http: ^0.13.5
+  flutter_vector_icons: ^2.0.0
 
 dev_dependencies:
   flutter_test:
