--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,11 @@ dependencies:
   latlong: ^0.6.1
   http: ^0.13.5
   flutter_vector_icons: ^2.0.0
+  youtube: ^1.0.1
+  url_launcher: ^6.1.9
+  image_picker: ^0.8.6+1
+  geocoding: ^2.0.5
+  geolocator: ^9.0.2
 
 dev_dependencies:
   flutter_test:
@@ -70,20 +75,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - img/images/wavydesign5.png
-    - img/images/wavydesign4.png
-    - img/images/gradient (1).png
-    - img/images/signupphoto.png
-    - img/images/wavydesign6 (2).png
-    - img/images/wavydesign7.png
-    - img/images/wavydesign7(2).png
-    - img/images/wavydesign8.png
-    - img/images/wavydesign9.png
-    - img/images/wave-haikei.png
-    - img/images/wave-haikei (1).png
-    - img/images/wave-haikei (2).png
-    - img/images/clean earth.jpg
-    - img/images/tushar.jpg
+    - img/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
